--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
-title:          Tale
-description:    "Minimal Jekyll theme for storytellers"
-baseurl:        "/tale"
-url:            "https://chesterhow.github.io"
+title:          龙光
+description:    "物华天宝，龙光射牛斗之墟。"
+baseurl:        ""
+url:            "https://hanqizheng.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
 
 # Author
 author:
-  name:         Chester How
-  url:          https://chester.how
-  email:        chesterhow@gmail.com
+  name:         Qizheng Han
+  url:          https://hanqizheng.github.io
+  email:        hanqizheng598@gmail.com
 
 # Build settings
 markdown:       kramdown
@@ -39,3 +39,8 @@ exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
 
 # Disqus (Set to your disqus id)
 disqus:         jekyll-tale
+
+theme:      tale
+
+permalink:  /:year-:month-:day/:title
+paginate:   5
